@@ -9,6 +9,7 @@ Copyright (C) 2005 Olivier Parent     <olivier-parent a.t users d.o.t sourceforg
 Copyright (C) 2005 Mark Sinke         <marksinke a.t users d.o.t sourceforge d.o.t net>
 Copyright (C) 2005 Jeremy Thomerson   <jthomerson a.t users d.o.t sourceforge d.o.t net>
 Copyright (C) 2005 Nathan Wilson      <ndciwilson a.t users d.o.t sourceforge d.o.t net>
+Copyright (C) 2005 Alex Ruiz          <alruiz15 a.t users d.o.t yahoo d.o.t com>
 
 Cobertura is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published
